--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.5.21", features = ["derive"] }
 futures = "0.3.31"
 pk2 = "0.2.0"
 speedy = "0.8.7"
